<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="found_gotify_version">检测服务器地址</string>
    <string name="version_failed_status_code">Request to \'%1$s\' failed with status code %2$d</string>
    <string name="version_failed">请求 \'%1$s\' 失败. %2$s.</string>
    <string name="wronguserpw">不存在此用户名和密码的用户</string>
    <string name="create_client_title">用户ID</string>
    <string name="create_client_message">为你本次登录创建一个ID吧</string>
    <string name="create">创建</string>
    <string name="cancel">取消</string>
    <string name="create_client_failed">创建失败</string>
    <string name="created_client">创建成功</string>
    <string name="auto_sign">设置失败</string>
    <string name="title_activity_logs">日志</string>
    <string name="title_activity_register">注册</string>
    <string name="retry">重试</string>
    <string name="logout">登出</string>
    <string name="oops">出错了</string>
    <string name="not_available">无法连接到%s</string>
    <string name="auth_failed">你尚未注册，可能是因为你的x-session-id已过期，请重新注册账号</string>
    <string name="other_error">Could not get current user. Server (%1$s) responded with code %2$d: body (first 200 chars): %3$s</string>
    <string name="user_action">需要重新登录</string>
    <string name="websocket_closed_logout">请重登，登录已过期</string>
    <string name="websocket_closed">连接已关闭</string>
    <string name="grouped_message">离线时共收到 %d 条消息</string>
    <string name="delete_all">删除所有的消息</string>
    <string name="delete_app">删除应用</string>
    <string name="error_delete_app">无法删除这个应用</string>
    <string name="delete_logs">删除日志</string>
    <string name="copy_logs">复制日志</string>
    <string name="logs_copied">日志已复制</string>
    <string name="snackbar_deleted">消息已删除</string>
    <string name="snackbar_undo">取消</string>
    <string name="all_messages">所有消息</string>
    <string name="logs">日志</string>
    <string name="message_image_desc">消息的图片</string>
    <string name="delete_message">删除消息</string>
    <string name="gotify_url">请输入服务器地址</string>
    <string name="gotify_port">请输入服务器端口号</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="disabled_validate_ssl">禁用SSL认证</string>
    <string name="select_ca_certificate">选择CA证书</string>
    <string name="select_ca_file">选择一个证书文件</string>
    <string name="please_install_file_browser">请下载一个文件浏览器</string>
    <string name="select_ca_failed">读取CA证书错误: %s</string>
    <string name="login">登录</string>
    <string name="check_url">检测URL地址</string>
    <string name="permissions_dialog_grant">同意</string>
    <string name="permissions_notification_denied_temp">一网怅学需要消息推送权限</string>
    <string name="permissions_notification_denied_permanent">一网怅学需要显示推送消息的权限，请在设置里配置相关权限</string>
    <string name="permissions_alarm_prompt">一网怅学需要断线重连的权限</string>
    <string name="gotify_logo">日志</string>
    <string name="refresh_all">刷新</string>
    <string name="logout_confirm">你真的要退出吗？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="ack">是否删除所有消息？</string>
    <string name="missed_messages">错过的消息</string>
    <string name="grouped_notification_text">新消息</string>
    <string name="websocket_listening">已连接</string>
    <string name="websocket_could_not_connect">无法连接</string>
    <string name="websocket_init">正在初始化</string>
    <string name="versions">gotify/android v%1$s; gotify/server v%2$s</string>
    <string name="advanced_settings">高级设置</string>
    <string name="register_page">注册</string>
    <string name="done">完成</string>
    <string name="no_certificate_selected">未选择任何证书</string>
    <string name="remove_ca_certificate">移除CA证书</string>
    <string name="warning">警告</string>
    <string name="http_warning">HTTP协议是不安全的，建议使用HTTPS协议</string>
    <string name="i_understand">我明白</string>
    <string name="no_messages_yet">目前没有收到任何签到通知</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_auto_sign">自动签到</string>
    <string name="settings_appearance">外观</string>
    <string name="setting_theme">主题</string>
    <string name="setting_key_theme">主题</string>
    <string name="setting_message_layout">消息布局</string>
    <string name="setting_key_message_layout">message_layout</string>
    <string name="setting_restart_dialog_title">重启应用?</string>
    <string name="setting_restart_dialog_message">APP重启后生效，你希望现在重启吗？</string>
    <string name="setting_restart_dialog_button1">现在重启</string>
    <string name="setting_restart_dialog_button2">以后</string>
    <string name="setting_time_format">Time format</string>
    <string name="setting_key_time_format">time_format</string>
    <string name="setting_notifications">通知</string>
    <string name="setting_notification_channels">Separate app notification channels</string>
    <string name="setting_key_notification_channels">notification_channels</string>
    <string name="setting_key_exclude_from_recent">exclude_from_recent</string>
    <string name="setting_exclude_from_recent">Exclude from recents</string>
    <string name="setting_intent_dialog_permission">Intent Action Permission</string>
    <string name="setting_key_intent_dialog_permission">intent_dialog_permission</string>
    <string name="setting_summary_intent_dialog_permission">To always show incoming intent URLs, give permission to show this app on top of other apps.</string>
    <string name="setting_summary_intent_dialog_permission_granted">权限已允许</string>
    <string name="push_message">Push message</string>
    <string name="appListDescription">App:</string>
    <string name="priorityDescription">Priority:</string>
    <string name="push_button">Push Message</string>
    <string name="push_title_hint">Title</string>
    <string name="push_content_hint">Content</string>
    <string name="push_priority_hint">Priority</string>
    <string name="push_missing_app_info">There are no applications available on the server to push a message to.</string>
    <string name="message_copied_to_clipboard">消息已复制</string>
    <string name="not_loggedin_share">无法连接到服务器，因为你还未登录.</string>
    <string name="action_dialog_missing">Missing URL</string>
    <string name="action_dialog_message">将要跳转至第三方URL，请注意安全</string>
    <string name="action_dialog_button_open">确认</string>
    <string name="action_dialog_button_cancel">取消</string>
    <string name="websocket_not_connected">未连接</string>
    <string name="websocket_reconnect">尝试重连</string>
    <plurals name="websocket_retry_interval">
        <item quantity="one">in %d minute</item>
        <item quantity="other">in %d minutes</item>
    </plurals>

    <string name="notification_channel_title_foreground">Gotify foreground notification</string>
    <string name="notification_channel_title_min">Min priority messages (&lt;1)</string>
    <string name="notification_channel_title_low">Low priority messages (1–3)</string>
    <string name="notification_channel_title_normal">Normal priority messages (4–7)</string>
    <string name="notification_channel_title_high">High priority messages (>7)</string>
    <string name="register_username">用户名</string>
    <string name="register_password">密码</string>
    <string name="server_address">服务器注册端口</string>
    <string name="x_session_id">X-Session-ID</string>
    <string name="register_confirm">注册</string>
    <string name="is_auto_sign">是否自动签到</string>
    <string name="setting_description">设置ssl证书</string>
</resources>
