<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        android:id="@+id/app_bar_drawer"
        layout="@layout/app_bar_drawer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_username" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/server_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/server_address" />

    <EditText
        android:id="@+id/x_session_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/x_session_id" />

    <Button
        android:id="@+id/register_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_login" />

</LinearLayout>
